<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MUPDF string -->
    <string name="mupdf_no_media_warning">Storage media not present</string>
    <string name="mupdf_no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="mupdf_parent_directory">[Up one level]</string>
    <string name="mupdf_picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="mupdf_cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="mupdf_cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="mupdf_cannot_open_document">Cannot open document</string>
    <string name="mupdf_cannot_open_buffer">Cannot open buffer</string>
    <string name="mupdf_enter_password">Enter password</string>
    <string name="mupdf_print_failed">Print failed</string>
    <string name="mupdf_entering_reflow_mode">Entering reflow mode</string>
    <string name="mupdf_format_currently_not_supported">Format currently not supported</string>
    <string name="mupdf_copy_text">copy text</string>
    <string name="mupdf_select_text">Select text</string>
    <string name="mupdf_highlight">Highlight</string>
    <string name="mupdf_underline">Underline</string>
    <string name="mupdf_strike_out">Strike-out</string>
    <string name="mupdf_ink">Ink</string>
    <string name="mupdf_draw_annotation">Draw annotation</string>
    <string name="mupdf_copied_to_clipboard">Copied to clipboard</string>
    <string name="mupdf_copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="mupdf_no_text_selected">No text selected</string>
    <string name="mupdf_nothing_to_save">Nothing to save</string>
    <string name="mupdf_document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="mupdf_fill_out_text_field">Fill out text field</string>
    <string name="mupdf_choose_value">Choose value</string>
    <string name="mupdf_not_supported">Not supported</string>
    <string name="mupdf_searching_">Searching&#8230;</string>
    <string name="mupdf_no_further_occurrences_found">No further occurrences found</string>
    <string name="mupdf_text_not_found">Text not found</string>
    <string name="mupdf_leaving_reflow_mode">Leaving reflow mode</string>
    <string name="mupdf_toggle_links">Highlight and enable links</string>
    <string name="mupdf_toggle_reflow_mode">Toggle reflow mode</string>
    <string name="mupdf_outline_title">Table of Contents</string>
    <string name="mupdf_search_document">Search document</string>
    <string name="mupdf_search_backwards">Search backwards</string>
    <string name="mupdf_search_forwards">Search forwards</string>
    <string name="mupdf_edit_annotations">Edit annotations</string>

    <!-- Common string -->
    <string name="empty"></string>
    <string name="cancel">Cancel</string>
    <string name="okay">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="print">Print</string>
    <string name="accept">Accept</string>
    <string name="done">Done</string>
    <string name="back">Back</string>

    <!-- Project string -->
    <string name="app_name">Cendrex</string>
    <string name="version">1.0</string>
    <string name="access_doors">ACCESS DOORS</string>
    <string name="advantages_menu">WINNING ADVANTAGES</string>
    <string name="library_menu">LIBRARY</string>
    <string name="new_menu">NEW PRODUCT</string>
    <string name="contact_us_menu">CONTACT US</string>
    <string name="title_choose_file_language">Choose language of files</string>
    <string name="title_choose_file_to_open">Choose file to open</string>
    <string name="setting_language_en">ANGLAIS</string>
    <string name="setting_language_fr">FRANÇAIS</string>
    <string name="loading">Loading &#8230;</string>
    <string name="title_table_of_contents">TABLE OF CONTENTS</string>
    <string name="catalog_and_data_sheet">Catalog and Technical Data Sheets</string>
    <string name="leed_link">LEED Documentation</string>
    <string name="home_text_architects">ARCHITECTS (CLICK HERE)</string>
    <string name="home_text_distributors">DISTRIBUTORS (CLICK HERE)</string>
    <string name="title_dialog_hyperlink">Click logo for hyperlink</string>
    <string name="mail">Mail</string>
    <string name="tel">Tel</string>

    <!-- Files name -->
    <string name="first_screen_pitch_file_1_en">CENDREX Advantage 2013</string>
    <string name="first_screen_pitch_file_2_en">CENDREX CTA flyer</string>
    <string name="first_screen_pitch_file_1_fr">CENDREX Avantage 2013</string>
    <string name="first_screen_pitch_file_2_fr">CENDREX CTA flyer</string>
    <string name="first_screen_doc_file_en">CENDREX Access Doors Catalog 2014 HR</string>
    <string name="first_screen_doc_file_fr">CENDREX Porte Accès Catalogue 2014 HR</string>
    <string name="first_screen_new_file">Cendrex CTA flyer</string>
    <string name="first_screen_new_video_file">CENDREX CTA Adjustable Access Door</string>

    <!-- Register user -->
    <string name="register_last_name">Last Name / Nom:</string>
    <string name="register_first_name">First Name / Prenom:</string>
    <string name="register_company">Company / Companie:</string>
    <string name="register_city">City / Ville:</string>
    <string name="register_state">State / Province:</string>
    <string name="register_email">Email / Courier:</string>
    <string name="signup_register">Sign up / Enregistrer</string>
    <string name="register_message">When you click "Sign up", you accept to let us storing your information above in our database. These information are used only for statistic purposes./ Lorsque vous cliquez sur "Enregistrer", vous acceptez de nous laisser stockage de vos informations ci-dessus dans notre base de données. Ces informations sont utilisées uniquement à des fins statistiques.</string>
    <string name="recipient">Recipient:</string>
    <string name="share_email">Share / Partager</string>
    <string name="share_message_note">By click "Share", you accept to let us storing your information above in our database. These information are used only for statistic purposes./ En cliquant sur "Patager", vous acceptez de nous laisser stockage de vos informations ci-dessus dans notre base de données. Ces informations sont utilisées uniquement à des fins statistiques.</string>
    <string name="advantage_title">Advantage</string>
    <string name="cendrex_info">Founded in 1985 and servicing a multitude of distributors located mainly in North America, Cendrex designs and manufactures a full range of quality <b>Access Doors, Roof Hatches, and Floor Hatches.</b>\nIts KAIZEN philosophy of continuous improvement has enabled Cendrex to become the most flexible and accommodating company in its field. As a result, the company offers unparalleled products and services to better fulfill the needs of its clients within the construction industry.\nHere is a quick view of what CENDREX has to offer: \n\t1 800 479-1489\n<u>CTA:Revolutionary, adjustable, general purpose access door</u>\nREDUCE installation time by 90% - ADJUSTABLE in size – AESTHETIC APPEARANCE\n<u>CTR: Contour Hidden Flange Access Door</u>\nCENDREX has engineered the unique and exclusive CTR Contour Hidden Flange Door. Easy installation, no mudding, taping or apparent flange make the CTR the most aesthetically pleasing access door available on the market.\n<u>WHITE DOORS</u>\nTo provide a more aesthetic finish. CENDREX Access Doors are manufactured in ‘WHITE POWDER COAT’ primer. No need to repaint.\n<u>ODD SIZE DOORS in 5 days</u>\nGet your odd size access doors manufactured in 5 business days. CENDREX is the industry’s leader in the fabrication of odd sizes.\n<u>CUSTOM DOORS in 10 days</u>\nGet your custom access doors manufactured in 10 business days. Shop drawings are provided for all custom doors.\n<u>LOCAL representatives</u>\nCENDREX has local representatives throughout North America and beyond.\n<u>EXTENSIVE distribution network</u>\n<b>LOCAL DISTRIBUTORS/PARTNERS</b> CENDREX sells exclusively through its distribution network.\n<b>REGIONAL WAREHOUSES</b> Located in California, Colorado, Florida, Illinois, Pennsylvania, Texas and Canada.\n<u>LEED ready</u>\nCENDREX access products contribute directly to obtaining points for LEAD® certification. All LEED® documents are developed in association with the foremost LEED® certification specialists, YRG in the U.S.A. and Vertima in Canada, to provide you with information you can trust.\n<u>GREEN beyond LEED®</u>\nCENDREX is incorporating sustainability strategies at all levels through an on-going commitment to reduce waste and increase efficiency.\n\nPlease visit us at www.cendrex.com</string>
    <string name="email_title">Invitation to install the Cendrex Access Door APP</string>
    <string name="email_message">\nThe new Cendrex APP, available for smartphones and tablets:\nApple: https://appsto.re/ca/bcR03.i\nAndroid: https://play.google.com/store/apps/details?id=com.cendrex\nContains:\n\t\t- Catalogue\n\t\t- Technical Data Sheets\n\t\t- New Products\n\t\t- Competitive Advantages\n\t\t- Cendrex Hotline\n\t\t- Tools for Architects/Spec Writers\nDon’t hesitate to share this APP with your business partners!\nCendrex makes it APP’n again!</string>

    <!-- Offices address -->
    <string name="california_north_title">California (North) (Warehouse)</string>
    <string name="california_north_address">2192 W.Winton Ave. Hayward CA 94545</string>
    <string name="california_south_title">California (South) (Warehouse)</string>
    <string name="california_south_address">15521 Blackburn Avenue Norwalk, CA 90650</string>
    <string name="colorado_title">Colorado (Warehouse)</string>
    <string name="colorado_address">14704 E.33rd PL.#33, Aurora, CO 80011</string>
    <string name="texas_title">Texas (Warehouse)</string>
    <string name="texas_address">1419 Mariposa Drive, Mesquite, TX 75150</string>
    <string name="illinois_title">Illinois (Warehouse)</string>
    <string name="illinois_address">921 Ardmore Ave, Itasca, IL 60143</string>
    <string name="florida_title">Florida (Warehouse)</string>
    <string name="florida_address">2915 Bush Drive, Melbourne FL 32935</string>
    <string name="philadelphia_title">Philadelphia (Warehouse)</string>
    <string name="philadelphia_address">2411 N.American Street, Philadelphia, PA 19133</string>
    <string name="montreal_title">Montréal (Head Office)</string>
    <string name="montreal_address">11303 26e Avenue, Montréal, Québec H1E 6N6</string>

</resources>