<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/bg_list_info_and_contents"
        android:padding="@dimen/margin_medium" >

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_document_selection"
            android:drawablePadding="@dimen/margin_medium"
            android:drawableTop="@drawable/ic_mail"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/mail"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMail"
            android:background="@drawable/bg_document_selection"
            android:drawablePadding="@dimen/margin_medium"
            android:drawableTop="@drawable/ic_phone"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/tel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgCloseContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/empty"
        android:src="@drawable/btn_close_state" />

</RelativeLayout>